--- a/teacherhomepage.html
+++ b/teacherhomepage.html
@@ -1,10 +1,3 @@
-<?php
-session_start();
-if(!isset($_SESSION['uid']) || $_SESSION['type']!='fac'){
-    header("Location: index.php");
-}
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,7 +37,7 @@ if(!isset($_SESSION['uid']) || $_SESSION['type']!='fac'){
                                 <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
                             </div>
                             <div class="login-content">
-                                <a href="#"><?php echo $_SESSION['uid']?></a> <a href="#"> || </a> <a href="include/logout.php">Logout</a>
+                                <a href="Register.html">[username]</a> <a href="#"> || </a> <a href="logout.php">Logout</a>
                             </div>
                         </div>
                     </div>
@@ -90,52 +83,52 @@ if(!isset($_SESSION['uid']) || $_SESSION['type']!='fac'){
                             <div class="tab-pane fade show active" id="tab2" role="tabpanel" aria-labelledby="tab--2">
                                 <div class="academy-tab-content">
                                     <!-- Tab Text -->
-                                    <form action="include/addvideo.php" method="post" enctype="multipart/form-data">
                                     <div class="academy-tab-text">
                                     	Month:
-                                        <select name="month">
-  												<option value="1">Month-1</option>
-  												<option value="2">Month-2</option>
-  												<option value="3">Month-3</option>
-  												<option value="4">Month-4</option>
-  												<option value="5">Month-5</option>
-  												<option value="6">Month-6</option>
-  												<option value="7">Month-7</option>
-  												<option value="8">Month-8</option>
-  												<option value="9">Month-9</option>
+                                        <select>
+  												<option value="Month1">Month-1</option>
+  												<option value="Month2">Month-2</option>
+  												<option value="Month3">Month-3</option>
+  												<option value="Month4">Month-4</option>
+  												<option value="Month5">Month-5</option>
+  												<option value="Month6">Month-6</option>
+  												<option value="Month7">Month-7</option>
+  												<option value="Month8">Month-8</option>
+  												<option value="Month9">Month-9</option>
 										</select>
 
 										Week:
-										<select name="week">
-  												<option value="1">Week-1</option>
-  												<option value="2">Week-2</option>
-  												<option value="3">Week-3</option>
-  												<option value="4">Week-4</option>
+										<select>
+  												<option value="Week1">Week-1</option>
+  												<option value="Week2">Week-2</option>
+  												<option value="Week3">Week-3</option>
+  												<option value="Week4">Week-4</option>
 										</select>
 
 
 										Day:
-										<select name="day">
-  												<option value="1">Day-1</option>
-  												<option value="2">Day-2</option>
-  												<option value="3">Day-3</option>
-  												<option value="4">Day-4</option>
-  												<option value="5">Day-5</option>
+										<select>
+  												<option value="Day1">Day-1</option>
+  												<option value="Day2">Day-2</option>
+  												<option value="Day3">Day-3</option>
+  												<option value="Day4">Day-4</option>
+  												<option value="Day5">Day-5</option>
 										</select>
 
 										<br>
 										<br>
 										<!-- https://www.w3schools.com/php/php_file_upload.asp -->
 
-
+										<form action="upload.php" method="post" enctype="multipart/form-data">
 											    Select Video to upload:
 											    <input type="file" name="fileToUpload" id="fileToUpload">
-											    <input type="submit" value="Upload Video" name="submitVideo">
-										
+											    <input type="submit" value="Upload Video" name="submit"><br><br>
+                          <input type="submit" value="View Uploaded Video" name="submit">
+                          <input type="submit" value="Delete Uploaded Video" name="submit">
+										</form>
 
 
                                     </div>
-                                    </form>
                                 </div>
                             </div>
                             
@@ -143,34 +136,35 @@ if(!isset($_SESSION['uid']) || $_SESSION['type']!='fac'){
                                 <div class="academy-tab-content">
                                     <!-- Tab Text -->
                                     <div class="academy-tab-text">
-                                        Month:<select>
-  												<option value="1">Month-1</option>
-  												<option value="2">Month-2</option>
-  												<option value="3">Month-3</option>
-  												<option value="4">Month-4</option>
-  												<option value="5">Month-5</option>
-  												<option value="6">Month-6</option>
-  												<option value="7">Month-7</option>
-  												<option value="8">Month-8</option>
-  												<option value="9">Month-9</option>
+                                        Month:
+                                        <select>
+  												<option value="Month1">Month-1</option>
+  												<option value="Month2">Month-2</option>
+  												<option value="Month3">Month-3</option>
+  												<option value="Month4">Month-4</option>
+  												<option value="Month5">Month-5</option>
+  												<option value="Month6">Month-6</option>
+  												<option value="Month7">Month-7</option>
+  												<option value="Month8">Month-8</option>
+  												<option value="Month9">Month-9</option>
 										</select>
 
 										Week:
 										<select>
-  												<option value="1">Week-1</option>
-  												<option value="2">Week-2</option>
-  												<option value="3">Week-3</option>
-  												<option value="4">Week-4</option>
+  												<option value="Week1">Week-1</option>
+  												<option value="Week2">Week-2</option>
+  												<option value="Week3">Week-3</option>
+  												<option value="Week4">Week-4</option>
 										</select>
 
 
 										Day:
 										<select>
-  												<option value="1">Day-1</option>
-  												<option value="2">Day-2</option>
-  												<option value="3">Day-3</option>
-  												<option value="4">Day-4</option>
-  												<option value="5">Day-5</option>
+  												<option value="Day1">Day-1</option>
+  												<option value="Day2">Day-2</option>
+  												<option value="Day3">Day-3</option>
+  												<option value="Day4">Day-4</option>
+  												<option value="Day5">Day-5</option>
 										</select>
 
 										<br>
@@ -180,7 +174,8 @@ if(!isset($_SESSION['uid']) || $_SESSION['type']!='fac'){
 										<form action="upload.php" method="post" enctype="multipart/form-data">
 											    Select Assignment/Notes to upload:
 											    <input type="file" name="fileToUpload" id="fileToUpload">
-											    <input type="submit" value="Upload Document" name="submit">
+											    <input type="submit" value="Upload Document" name="submit"> <br><br>
+                          						<a href="assignment.html">View Student Assignments</a>
 										</form>
                                     </div>
                                 </div>
